Streamlined the notebook and extended the paper.  Room for some further discussion.

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -7,7 +7,37 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{abdo2018data,
+  title={{Data-Driven Surrogate Model to Predict Isotopic Composition Using Dynamic Mode Decomposition}},
+  author={Abdo, M. and Elzohery, R. and Roberts, J.A.},
+  booktitle={PHYSOR},
+  year={2018}
+}
 
+@article{elzohery2018cbg,
+  title={{Comparison Between Gaussian Processes and DMD Surrogates for Isotopic Composition Prediction}},
+  author={Elzohery, R. and Abdo, M. and Roberts, J.A.},
+  journal={Trans. Am. Nucl. Soc.},
+  volume={118},
+  year={2018}
+}
+
+@article{alfonsi2018dhc,
+  title={{Decay Heat Curve Generation for High Temperature Reactors Using Exponentials, Support Vector Machines and Dynamic Mode Decomposition Within the RAVEN Framework}},
+  author={ Alfonsi, A. and Hummel, A. and Sen, S. and Strydom, G. and Gougar, H.},
+  journal={Trans. Am. Nucl. Soc.},
+  volume={118},
+  year={2018}
+}
+
+@article{wang2017usa,
+  title={{Uncertainty and Sensitivity Analysis of TREAT Transient Test 15}},
+  author={Wang, C. and Schuner, S. and Tablot, P.W., and Baker, B. and Wang, Y. and Ortensi, J. and Gleicher, F. and DeHart, M. and Rabiti, C.},
+  journal={Trans. Am. Nucl. Soc.},
+  volume={116},
+  pages={625--628},
+  year={2017}
+}
 
 @book{kutz2016dynamic,
   title={Dynamic Mode Decomposition: Data-Driven Modeling of Complex Systems},
@@ -98,4 +128,32 @@ title = {Kriging-based Surrogate Models for Uncertainty Quantification and Sensi
   pages={126--148},
   year={2011},
   publisher={Taylor \& Francis}
+}
+
+@article{jovanovic2014sparsity,
+  title={{Sparsity-Promoting Dynamic mode Decomposition}},
+  author={Jovanovi{\'c}, M.R. and Schmid, P.J. and Nichols, J.W.},
+  journal={Physics of Fluids},
+  volume={26},
+  number={2},
+  pages={024103},
+  year={2014},
+  publisher={AIP}
+}
+
+@article{demo2018pydmd,
+  title={PyDMD: Python Dynamic Mode Decomposition},
+  author={Demo, N. and Tezzele, M. and Rozza, G.},
+  journal={The Journal of Open Source Software},
+  volume={3},
+  number={22},
+  pages={530},
+  year={2018}
+}
+
+@techreport{anl,
+  title={Argonne Code Center: Benchmark Problem Book},
+  number={ANL-7416},
+  institution={Argonne National Laboratory},
+  year={1972}
 }
