--- a/paper/dmd_lra_surrogate_ans.tex
+++ b/paper/dmd_lra_surrogate_ans.tex
@@ -133,7 +133,7 @@ Consequently, a simple scheme was explored to improve DMD analysis of rapid dyna
 Suppose the dynamics of a system can be partitioned into intervals of time in which characteristic time scales are comparable.
 Then, DMD can be applied independently within each interval, with ranks selected according to the number of snapshots in the interval and the corresponding dynamics represented by those snapshots.
 Identification of partition times can be informed by these underlying dynamics, perhaps as quantified by a mean or integral quantity. 
-As an example, it was found for the present work that the the core power provided useful guidance.
+As an example, it was found for the present work that the core power provided useful guidance.
 It is expected that heuristics might exist based on similar, integral in other applications, and that the process of selecting intervals might easily be integrated into an optimization scheme that determines an appropriate threshold value.
 
 \section{Results and Analysis}
@@ -218,7 +218,7 @@ The discretization used is far from numerically converged, but it produces a suf
       \draw[black,yshift=0.1*\y cm] (.3,0) -- (0,0) node[left] {$\ytext$};
 \end{scope}
 \end{tikzpicture}
-\caption{Schematic of LRA benchmark.  Region numbers indicate material assignment.  Region R is the the ejected rod.  A 15 cm coarse mesh for individual assemblies is overlaid.}
+\caption{Schematic of LRA benchmark.  Region numbers indicate material assignment.  Region R is the  ejected rod.  A 15 cm coarse mesh for individual assemblies is overlaid.}
 \label{fig:lra_core}
 \end{figure}
 
