added Mohammad's modified conclusion

--- a/paper/dmd_lra_surrogate_ans.tex
+++ b/paper/dmd_lra_surrogate_ans.tex
@@ -256,10 +256,7 @@ Though promising, the quality of the approximation proved to be very sensitive t
 
 \section{Conclusions}
 
-A DMD-based surrogate was shown to represent the spatiotemporal dynamics of the LRA benchmark accurately when by produced by a sequence of individual DMD surrogates in time. 
-The surrogate was shown to be sensitive to the time partioning.
-Work is ongoing to mitigate this sensitivity and to provide an automated way to select the number of partitions and their boundaries.
-
+A DMD-based surrogate was shown to represent the spatio-temporal dynamics of the LRA benchmark accurately when produced by a sequence of individual DMD surrogates in time. The benchmark exhibits a rapid severe change in dynamics within a very short time scale, which was captured by the DMD ensemble of surrogates allowing different ranks for each interval. The surrogate was able to offer a precision of $10^{-8}\%$ in the maximum power region, and a maximum error of 10\% at the very beginning of the simulation. The surrogate was shown to be sensitive to the time partitioning. Work is ongoing to mitigate this sensitivity and to provide an automated way to select the number of partitions and their boundaries.
 \section{Acknowledgments}
 
 The material presented is based on work supported in part by a U.S. NRC Faculty Develoment Grant. 
